# ChangeLog for sys-apps/lm_sensors
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/lm_sensors/ChangeLog,v 1.79 2007/11/21 17:17:47 nixnut Exp $

  21 Nov 2007; nixnut <nixnut@gentoo.org> lm_sensors-2.10.4.ebuild:
  Stable on ppc wrt bug 195220

  04 Nov 2007; Dawid Węgliński <cla@gentoo.org> lm_sensors-2.10.4.ebuild:
  Stable on x86 (bug #195220)

  04 Nov 2007; Christoph Mende <angelos@gentoo.org>
  lm_sensors-2.10.4.ebuild:
  Stable on amd64 wrt bug #195220

  28 Oct 2007; Christian Heim <phreak@gentoo.org> lm_sensors-2.10.1.ebuild,
  lm_sensors-2.10.2.ebuild, lm_sensors-2.10.3.ebuild,
  lm_sensors-2.10.4.ebuild:
  Include virtual/logger in RDEPEND, as the initscript already specifies 'need
  logger'.

*lm_sensors-2.10.4 (30 Jul 2007)

  30 Jul 2007; Stefan Schweizer <genstef@gentoo.org>
  +files/lm_sensors-2.10.4-sensors-detect-gentoo.patch,
  +lm_sensors-2.10.4.ebuild:
  Version bump thanks to cilly <cilly@cilly.mine.nu> in bug 186720

  03 Jul 2007; Raúl Porcel <armin76@gentoo.org> lm_sensors-2.10.3.ebuild:
  Add ~alpha wrt #144319

  12 Jun 2007; Matthias Schwarzott <zzam@gentoo.org>
  files/lm_sensors-init.d:
  Last piece in init-script busybox/dash compatibility, replacing &>
  redirections.

  05 Jun 2007; Marien Zwart <marienz@gentoo.org> lm_sensors-2.10.1.ebuild,
  lm_sensors-2.10.2.ebuild, lm_sensors-2.10.3.ebuild:
  Make the CONFIG_I2C check a warning instead of an error (not all sensor
  chips need this).

  03 Jun 2007; Doug Goldstein <cardoe@gentoo.org> lm_sensors-2.10.3.ebuild:
  Add missing depend. decode-edid.pl needs parse-edid from x11-misc/read-edid

  18 May 2007; Christian Heim <phreak@gentoo.org> files/lm_sensors-init.d:
  Really make the init-script busybox/dash compatible (thanks to Mike Arthur
  <mike at mikearthur.co.uk> in #178781).

  17 May 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Assigning sys-apps/lm_sensors directly to mobile at gentoo.org.
