@@ -38,14 +38,14 @@ EBUILD lm_sensors-2.10.3.ebuild 4482 RMD160 8a8cd8cdb2fd5dcd269aa693ace43e0ac946
 MD5 e2f9612afe9a992ff574148aba5d238f lm_sensors-2.10.3.ebuild 4482
 RMD160 8a8cd8cdb2fd5dcd269aa693ace43e0ac946fd5e lm_sensors-2.10.3.ebuild 4482
 SHA256 d716862f091e9db23bbc1247569b571ea4b8dfc8e9d3d98925592b2d3da773f2 lm_sensors-2.10.3.ebuild 4482
-EBUILD lm_sensors-2.10.4.ebuild 4479 RMD160 9cd35061414d992e27c2ca700c715f82197aaacb SHA1 5e62c9b2923571bc91249c50ada8f2cad3aba13a SHA256 cb4fa34ff4ea37f7954c8b850a8aef941cef57396d2495264e081fe32c39272a
-MD5 dd871e7f4df44ed5ad5390615d31f551 lm_sensors-2.10.4.ebuild 4479
-RMD160 9cd35061414d992e27c2ca700c715f82197aaacb lm_sensors-2.10.4.ebuild 4479
-SHA256 cb4fa34ff4ea37f7954c8b850a8aef941cef57396d2495264e081fe32c39272a lm_sensors-2.10.4.ebuild 4479
-MISC ChangeLog 7870 RMD160 64cc5b57dfcfeffc1259c46a6685a2a3b97c6367 SHA1 e6ed3ec064d6949cd016bcd1a33099c54ca15bd3 SHA256 d86fb0df121e7eb01934ddddccaf09c1c85edf048ee638bd8c2644d4f6409d6f
-MD5 923e285aad1e2696e620369a356e8c40 ChangeLog 7870
-RMD160 64cc5b57dfcfeffc1259c46a6685a2a3b97c6367 ChangeLog 7870
-SHA256 d86fb0df121e7eb01934ddddccaf09c1c85edf048ee638bd8c2644d4f6409d6f ChangeLog 7870
+EBUILD lm_sensors-2.10.4.ebuild 4486 RMD160 c689fbfb50ff6865e3011c7cafb72818a147292b SHA1 f4711e67c8a1267f3d5204c9004bcc2e930dfc1e SHA256 a53d37f329568a18661365c1c3847941d355478ecd39abb60f637d13927fae14
+MD5 1e59ec82226adc31afcdd2e2f94b665a lm_sensors-2.10.4.ebuild 4486
+RMD160 c689fbfb50ff6865e3011c7cafb72818a147292b lm_sensors-2.10.4.ebuild 4486
+SHA256 a53d37f329568a18661365c1c3847941d355478ecd39abb60f637d13927fae14 lm_sensors-2.10.4.ebuild 4486
+MISC ChangeLog 8030 RMD160 c3e1de07d579643842e66067167417ce60a37d2b SHA1 0fd32f9e9302cf8d32aa55acd695f41c29ac1ab9 SHA256 054548274bf94186e4c1b7bf1e1ed7656a19eb5ea9a6fa3ce08ea636315d5c9e
+MD5 1646cea87c5a7b9456a28d8229c33b83 ChangeLog 8030
+RMD160 c3e1de07d579643842e66067167417ce60a37d2b ChangeLog 8030
+SHA256 054548274bf94186e4c1b7bf1e1ed7656a19eb5ea9a6fa3ce08ea636315d5c9e ChangeLog 8030
 MISC metadata.xml 160 RMD160 8521c3bd3ae0fb2bfddce5edb33fd31e223747e1 SHA1 194b7194f38673fe427e5893a42cd4c1506ce846 SHA256 b13062a43e40469b137e1206494a44b45755ea69511b64e5373cb1ce30bbb160
 MD5 ef08587bc47655d768c868f586721d8e metadata.xml 160
 RMD160 8521c3bd3ae0fb2bfddce5edb33fd31e223747e1 metadata.xml 160
